syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.dld.hll.protobuf.generator.service.grpc";
option java_outer_classname = "CommonClass";
import "google/protobuf/wrappers.proto";

message RequestHeader {
    // 追踪ID
    google.protobuf.StringValue trcId = 1;
    // 远程请求IP地址
    google.protobuf.StringValue remoteIp = 2;
}

message UserBaseReq {
    // 请求头
    RequestHeader header = 1;
    // 用户ID
    google.protobuf.Int64Value id = 2;
}

message BaseReq {
    // 请求头
    RequestHeader header = 1;
}

message BaseResp {
    // 返回码
    google.protobuf.StringValue resCode = 1;
    // 返回信息
    google.protobuf.StringValue resMsg = 2;
}

message MapStringString {
    map<google.protobuf.StringValue, google.protobuf.StringValue> mapStringString = 1;
}

message ListString {
    repeated google.protobuf.StringValue listString = 1;
}

message Empty {
}
